--- a/requirements.txt
+++ b/requirements.txt
@@ -5,19 +5,23 @@ certifi==2018.8.24
 chardet==3.0.4
 Click==7.0
 enum34==1.1.6
-futures==3.2.0
+futures==3.1.1
+gevent==1.3.6
 google-api-core==1.4.1
 google-api-python-client==1.7.4
 google-auth==1.5.1
 google-auth-httplib2==0.0.3
 google-cloud-speech==0.36.0
 googleapis-common-protos==1.5.3
+greenlet==0.4.15
 grpcio==1.15.0
 gTTS==2.0.1
 gTTS-token==1.1.2
 httplib2==0.11.3
 idna==2.7
+mistyPy==0.0.2
 numpy==1.15.2
+opencv-python==3.4.3.18
 Pillow==5.3.0
 protobuf==3.6.1
 pyasn1==0.4.4
