--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,26 @@
 beautifulsoup4==4.6.3
 bs4==0.0.1
 cachetools==2.1.0
-certifi==2018.8.24
+certifi==2018.10.15
 chardet==3.0.4
 Click==7.0
 enum34==1.1.6
 futures==3.1.1
-gevent==1.3.6
-google-api-core==1.4.1
+gevent==1.3.7
+google-api-core==1.5.0
 google-api-python-client==1.7.4
 google-auth==1.5.1
 google-auth-httplib2==0.0.3
 google-cloud-speech==0.36.0
 googleapis-common-protos==1.5.3
 greenlet==0.4.15
-grpcio==1.15.0
+grpcio==1.16.0
 gTTS==2.0.1
 gTTS-token==1.1.2
 httplib2==0.11.3
 idna==2.7
-mistyPy==0.0.2
+imageio==2.4.1
+mistyPy==0.0.3
 numpy==1.15.2
 opencv-python==3.4.3.18
 Pillow==5.3.0
@@ -28,12 +29,15 @@ pyasn1==0.4.4
 pyasn1-modules==0.2.2
 pydub==0.23.0
 pyjsparser==2.5.2
-pytz==2018.5
-requests==2.19.1
+pypng==0.0.18
+PyQRCode==1.2.1
+pytz==2018.7
+pyzbar==0.1.7
+requests==2.20.0
 rsa==4.0
 six==1.11.0
 SpeechRecognition==3.8.1
 tzlocal==1.5.1
 uritemplate==3.0.0
-urllib3==1.23
+urllib3==1.24
 websocket-client==0.53.0
