--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+baidu-aip==2.2.8.0
 beautifulsoup4==4.6.3
 bs4==0.0.1
 cachetools==2.1.0
@@ -20,7 +21,6 @@ gTTS-token==1.1.2
 httplib2==0.11.3
 idna==2.7
 imageio==2.4.1
-mistyPy==0.0.3
 numpy==1.15.2
 opencv-python==3.4.3.18
 Pillow==5.3.0
